# simplekalman

./: HOW_TO_RUN_TESTS.txt  README.md  pyproject.toml
src/simplekalman/: __init__.py  conceptual.py  kalman_filter.py  late_data.py  motion_estimate.py  numeric.py  outliers.py  sensor.py  units.py
tests/: test_kalman_filter.py
